--- a/InkToolbarRevealStyleRepo/MainPage.xaml
+++ b/InkToolbarRevealStyleRepo/MainPage.xaml
@@ -1,13 +1,18 @@
-﻿<Page
-    x:Class="InkToolbarRevealStyleRepo.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:InkToolbarRevealStyleRepo"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="InkToolbarRevealStyleRepo.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
+        <Border Background="{ThemeResource SystemControlBackgroundBaseLowBrush}" Grid.Row="1">
+            <InkToolbar Margin="24" />
+        </Border>
     </Grid>
 </Page>
